examples/code/front-end/camlp4_toplevel.topscript
#silent true;;
#use "topfind";;
#thread;;
#camlp4o;;
#require "core";;
#require "core.top";;
#require "ppx_jane";;
#silent false;;
[@@@part "0.5"];;
#use "topfind" ;;
[%%expect ocaml {|- : unit = ()|};
{|
Findlib has been successfully loaded. Additional directives:
  #require "package";;      to load a package
  #list;;                   to list the available packages
  #camlp4o;;                to load camlp4 (standard syntax)
  #camlp4r;;                to load camlp4 (revised syntax)
  #predicates "p,q,...";;   to set these predicates
  Topfind.reset();;         to force that packages will be reloaded
  #thread;;                 to enable threads

|};
ocaml {|- : unit = ()|}];;
#camlp4o ;;
[@@@part "1"];;
#require "comparelib.syntax" ;;
[%%expect{|No such package: comparelib.syntax|}];;
type t = { foo: string; bar : t } ;;
[%%expect ocaml {|type t = { foo : string; bar : t; }|}];;
type t = { foo: string; bar: t } [@@deriving compare] ;;
[%%expect{|
Characters 16-22:
Error: Unbound value compare_string
|}];;
